--- a/26-react-router/src/App.css
+++ b/26-react-router/src/App.css
@@ -11,6 +11,20 @@ button {
   cursor: pointer;
 }
 
+a {
+  color: lightblue;
+  font-size: 35px;
+}
+
+a {
+  margin: 15px;
+}
+
+nav {
+  background-color: darkslategray;
+  padding: 5px;
+}
+
 h1 {
   font-size: 90px;
   margin-top: 20px;
